--- a/bff-service/src/main/resources/templates/home.html
+++ b/bff-service/src/main/resources/templates/home.html
@@ -4,8 +4,6 @@
     <title>Home</title>
 </head>
 <body>
-    <h2>
-        <a href="/">Vendoria Home Page</a>
-    </h2>
+<h2>Vendoria Home Page</h2>
 </body>
 </html>
