--- a/bff-service/src/main/resources/templates/signin.html
+++ b/bff-service/src/main/resources/templates/signin.html
@@ -6,19 +6,19 @@
     <title>Sign In</title>
 </head>
 <body>
-<div th:if="${param.logout}">
-    You have been logged out.
-</div>
+<h2>Sign In</h2>
+<form action="/signin" method="post">
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="username" required><br>
 
-<h1>[SIGN IN]</h1>
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" required><br>
 
-<form th:action="@{/signin}" method="post">
-    <div><label> Email: <input type="text" name="username"/> </label></div>
-    <div><label> Password: <input type="password" name="password"/> </label></div>
-    <div><input type="submit" value="Sign In"/></div>
+    <button type="submit">Sign In</button>
 </form>
-
-<h2><a href="/">Home</a></h2>
-
+<p>Don't have an account? <a href="/register">Register</a></p>
+<div th:if="${error}">
+    <p style="color:red;" th:text="${error}"></p>
+</div>
 </body>
 </html>
