--- a/bff-service/src/main/resources/templates/layouts/main.html
+++ b/bff-service/src/main/resources/templates/layouts/main.html
@@ -8,67 +8,55 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-<th:block th:fragment="main">
+<th:block th:fragment="main(content)">
     <nav class="bg-white shadow-lg">
-        <div class="max-w-6xl mx-auto px-4">
+        <div class="max-w-7xl mx-auto px-4">
             <div class="flex justify-between">
                 <div class="flex space-x-7">
                     <div>
-                        <a href="/" class="flex items-center py-4">
+                        <a href="/" class="flex items-center py-4 px-2">
                             <span class="font-semibold text-gray-500 text-lg">Vendoria</span>
                         </a>
                     </div>
-                    <!-- Навігаційні посилання -->
                     <div class="hidden md:flex items-center space-x-1">
-                        <a href="/"
-                           class="py-4 px-2 text-gray-500 hover:text-green-500 transition duration-300">Головна</a>
                         <a href="/products"
-                           class="py-4 px-2 text-gray-500 hover:text-green-500 transition duration-300">Товари</a>
+                           class="py-4 px-2 text-gray-500 hover:text-green-500 transition duration-300">Products</a>
 
-                        <!-- Меню для адміністратора -->
-                        <div sec:authorize="hasRole('ADMIN')">
-                            <a href="/admin/users"
-                               class="py-4 px-2 text-gray-500 hover:text-green-500 transition duration-300">Користувачі</a>
-                            <a href="/admin/products"
-                               class="py-4 px-2 text-gray-500 hover:text-green-500 transition duration-300">Управління
-                                товарами</a>
-                        </div>
+                        <a sec:authorize="hasAuthority('ROLE_[ADMIN]')" href="/admin/users"
+                           class="py-4 px-2 text-gray-500 hover:text-green-500 transition duration-300">Users</a>
 
-                        <!-- Кошик для звичайного користувача -->
-                        <div sec:authorize="hasRole('USER')">
-                            <a href="/cart"
-                               class="py-4 px-2 text-gray-500 hover:text-green-500 transition duration-300">Кошик</a>
-                        </div>
+                        <a sec:authorize="hasAuthority('ROLE_[ADMIN]')" href="/admin/products"
+                           class="py-4 px-2 text-gray-500 hover:text-green-500 transition duration-300">Products
+                            manage</a>
+
+                        <a href="/cart"
+                           class="py-4 px-2 text-gray-500 hover:text-green-500 transition duration-300">Cart</a>
                     </div>
                 </div>
 
                 <!-- Кнопки входу/реєстрації -->
                 <div class="hidden md:flex items-center space-x-3">
-                    <div sec:authorize="isAuthenticated()">
-                        <span class="text-gray-500 mr-4" sec:authentication="name"></span>
-                        <form th:action="@{/logout}" method="post" class="inline">
-                            <button type="submit"
-                                    class="py-2 px-2 font-medium text-gray-500 rounded hover:bg-green-500 hover:text-white transition duration-300">
-                                Вийти
-                            </button>
-                        </form>
-                    </div>
                     <div sec:authorize="!isAuthenticated()">
                         <a href="/signin"
-                           class="py-2 px-2 font-medium text-gray-500 rounded hover:bg-green-500 hover:text-white transition duration-300">Увійти</a>
+                           class="py-2 px-2 font-medium text-gray-500 rounded hover:bg-green-500 hover:text-white transition duration-300">Logout</a>
                         <a href="/register"
-                           class="py-2 px-2 font-medium text-white bg-green-500 rounded hover:bg-green-400 transition duration-300">Реєстрація</a>
+                           class="py-2 px-2 font-medium text-white bg-green-500 rounded hover:bg-green-400 transition duration-300">Register</a>
                     </div>
+                    <form sec:authorize="isAuthenticated()" th:action="@{/logout}" method="post">
+                        <button type="submit"
+                                class="py-2 px-2 font-medium text-white bg-red-500 rounded hover:bg-red-400 transition duration-300">
+                            Logout
+                        </button>
+                    </form>
                 </div>
             </div>
         </div>
     </nav>
 
     <!-- Основний контент -->
-    <div class="container mx-auto px-4 py-8">
-        <th:block th:replace="${content}">
-        </th:block>
-    </div>
+    <main class="container mx-auto mt-4">
+        <th:block th:replace="${content}"/>
+    </main>
 </th:block>
 </body>
 </html>
